// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FiltersFromProperties should concat the modelPrefix with the model 1`] = `
<TextFilter
  label="textLabel"
  model=".filters.prefix.textFilter"
  onChange={[Function]}
/>
`;

exports[`FiltersFromProperties when type is date, multidate, multidaterange or daterange should render a date filter 1`] = `
Array [
  <DateFilter
    format="dateFormat"
    label="dateLabel"
    model=".filters.dateFilter"
    onChange={[Function]}
  />,
  <DateFilter
    format="dateFormat"
    label="daterangeLabel"
    model=".filters.daterange"
    onChange={[Function]}
  />,
  <DateFilter
    format="dateFormat"
    label="multidateLabel"
    model=".filters.multidate"
    onChange={[Function]}
  />,
  <DateFilter
    format="dateFormat"
    label="multidaterangeLabel"
    model=".filters.multidaterange"
    onChange={[Function]}
  />,
]
`;

exports[`FiltersFromProperties when type is nested should render a number range filter 1`] = `
<NestedFilter
  aggregations={
    Immutable.Map {
      "aggregations": "aggregations",
    }
  }
  label="nestedLabel"
  model=".filters.nestedFilter"
  onChange={[Function]}
  property={
    Object {
      "label": "nestedLabel",
      "name": "nestedFilter",
      "type": "nested",
    }
  }
/>
`;

exports[`FiltersFromProperties when type is numeric should render a number range filter 1`] = `
<NumberRangeFilter
  label="numericLabel"
  model=".filters.numericFilter"
  onChange={[Function]}
/>
`;

exports[`FiltersFromProperties when type is select, multiselect or relationship should render a select filter 1`] = `
Array [
  <SelectFilter
    allowSelectGroup={true}
    label="selectLabel"
    lookup={[Function]}
    model=".filters.selectFilter"
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "option1",
          "url": "/library/?q=(allAggregations:!f,filters:(selectFilter:(values:!())),from:0,includeUnpublished:!f,limit:30,order:desc,sort:creationDate,unpublished:!f)",
        },
        Object {
          "id": "missing",
          "label": "No Label",
          "url": "/library/?q=(allAggregations:!f,filters:(selectFilter:(values:!())),from:0,includeUnpublished:!f,limit:30,order:desc,sort:creationDate,unpublished:!f)",
        },
      ]
    }
    prefix="selectFilter"
    showBoolSwitch={false}
    sort={false}
    totalPossibleOptions={2}
  />,
  <SelectFilter
    allowSelectGroup={true}
    label="multiselectLabel"
    lookup={[Function]}
    model=".filters.multiselectFilter"
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "option3",
          "url": "/library/?q=(allAggregations:!f,filters:(multiselectFilter:(values:!())),from:0,includeUnpublished:!f,limit:30,order:desc,sort:creationDate,unpublished:!f)",
        },
      ]
    }
    prefix="multiselectFilter"
    showBoolSwitch={true}
    sort={false}
    totalPossibleOptions={1}
  />,
  <SelectFilter
    allowSelectGroup={true}
    label="relationshipLabel"
    lookup={[Function]}
    model=".filters.relationshipFilter"
    onChange={[Function]}
    options={
      Array [
        Object {
          "label": "option2",
          "url": "/library/?q=(allAggregations:!f,filters:(relationshipFilter:(values:!())),from:0,includeUnpublished:!f,limit:30,order:desc,sort:creationDate,unpublished:!f)",
        },
      ]
    }
    prefix="relationshipFilter"
    showBoolSwitch={true}
    sort={true}
    totalPossibleOptions={1}
  />,
]
`;

exports[`FiltersFromProperties when type is text should render a text filter 1`] = `
<TextFilter
  label="textLabel"
  model=".filters.textFilter"
  onChange={[Function]}
/>
`;
